--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,14 @@
-@import "tailwindcss";
-@import "tailwindcss/preflight";
+@import "tailwindcss/preflight" layer(base);
+@import "tailwindcss/theme" layer(theme);
+@import "tailwindcss/utilities" layer(utilities);
+
+/* Ваши дополнительные глобальные стили */
+@layer utilities {
+  /* Пример кастомного класса */
+  .my-custom-class {
+    @apply bg-red-500 text-white;
+  }
+}
 
 :root {
   --background: #ffffff;
@@ -25,4 +34,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   overflow-y: hidden;
+}
+
+*, :after, :before, ::backdrop, ::file-selector-button {
+    box-sizing: border-box;
+    border: 0 solid;
+    margin: 0;
+    padding: 0;
 }
