--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,13 @@
-@import "tailwindcss/preflight" layer(base);
-@import "tailwindcss/theme" layer(theme);
-@import "tailwindcss/utilities" layer(utilities);
+@import 'tailwindcss/preflight' layer(base);
+@import 'tailwindcss/theme' layer(theme);
+@import 'tailwindcss/utilities' layer(utilities);
 
+@font-face {
+  font-family: 'Urbanist';
+  src: url('/fonts/Urbanist-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-display: swap;
+}
 /* Ваши дополнительные глобальные стили */
 @layer utilities {
   /* Пример кастомного класса */
@@ -32,13 +38,29 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Urbanist, Montserrat';
   overflow-y: hidden;
 }
 
-*, :after, :before, ::backdrop, ::file-selector-button {
-    box-sizing: border-box;
-    border: 0 solid;
-    margin: 0;
-    padding: 0;
+*,
+:after,
+:before,
+::backdrop,
+::file-selector-button {
+  box-sizing: border-box;
+  border: 0 solid;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  overscroll-behavior: none;
+}
+
+[data-animate-presence] {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
