--- a/app/globals.css
+++ b/app/globals.css
@@ -38,7 +38,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: 'Urbanist, Montserrat';
+  font-family: 'Urbanist', "Montserrat";
   overflow-y: hidden;
 }
 
