feat: add main page and swiper block, fix bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,6 +58,10 @@ body {
   overscroll-behavior: none;
 }
 
+div::-webkit-scrollbar {
+  width: 0;
+}
+
 [data-animate-presence] {
   position: relative;
   width: 100%;
